src/app/nav-bar/nav-bar.component.scss
.sidenav-container {
  height: 100%;
}

.sidenav {
  width: 200px;
}

.sidenav .mat-toolbar {
  background: inherit;
}

.mat-toolbar.mat-primary {
  position: sticky;
  top: 0;
  z-index: 1;
}
a {
  &.toolbar-link {
    all: unset;
    cursor: pointer;
    margin-right: 0.75rem;
    display: table-cell;
    vertical-align: middle;
    @media  screen and (max-width: 675px + 1px) {
        &:not(.icon-filter){
          display: none;
        }
    }
  }
}
.brand-icon {
  height: 40px;
  width: 40px;
}
.spacer {
  flex: 1 1 auto;
}
.filter-green {
  filter: invert(48%) sepia(79%) saturate(200%) hue-rotate(86deg) brightness(118%) contrast(119%)
}
:host-context(.light){
  filter: none!important;
}
.icon-filter {
  filter: saturate(95%) brightness(118%) sepia(25%)!important
}
.hidden {
  display: none;
}

